TGR-666: fixed but in externalUrl node where rerouting would be sent to port "-1"